# miles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1689_walkthrough.md  A.py  CI_TEST_DUMMY.md  CONTRIBUTING.md  GLM52_4node_plan.md  MANIFEST.in  PR_DRAFT.md  README.md  README_DEV.md  README_miles.md  build_conda.sh  consolidate_timer_log.py  diff.txt  launch_glm_rl.sh  miles_artifact.py  preparation.sh  pyproject.toml  readme_deepep_fp8.md  requirements.txt  result  ring_wrapper.py  run.sh  setup.py  tmp  train.py  train_async.py  train_diffusion.py  train_multi_lora_async.py  train_sft.py  workflow_gb200.md
.claude/: ft-architecture.md  settings.local.json
.github/: CI_PERMISSION.json  CODEOWNERS  MAINTAINER.md  pull_request_template.md  slash_command_handler.py
.msc/: config.yaml  preset.py
code/: K8S_MULTI_NODE_RL.md  convert_run_script_to_test_style.py  cpu_mini.yaml  demo.txt  deploy-gpu.yaml  docker-daemon.json  harbor.dockerfile  init-home-symlinks.sh  k8s_init.sh  m25_8node.yaml  minimax.patch  multi_node.yaml  qwen35_35B_A3B_multi_node.yaml  qwen35_9B_multi_node.yaml  ray_init_simple.sh  run-m2.5.converted.py  run_m25.py  server.py  setup-fs-dotfiles.sh  sglang-minimax-topk-layer_id.patch  single_node.yaml  stop_ray.sh  u2.patch  ycy_harbor.Dockerfile  ycy_miles.Dockerfile  yzx_ray_init.sh
cp_kernel/: tilelang.patch
docker/: Dockerfile  Dockerfile.dev  README.md  (+13 more)
examples/experimental/openenv/swe_env/: __init__.py  client.py  models.py  pyproject.toml
examples/experimental/openenv/swe_env/server/: __init__.py  app.py  swe_env_environment.py
(+4434 files in other folders)
