# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-swe_env"
version = "0.1.0"
description = "SWE-bench environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv[core]>=0.2.3",
    # Docker-backed task isolation
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
# Server entry point: python -m swe_env.server.app
server = "swe_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["swe_env", "swe_env.server"]
package-dir = { "swe_env" = ".", "swe_env.server" = "server" }
